fix report issue frontpage button jumping one pixel

--- a/themes/oxygen/css/theme.css
+++ b/themes/oxygen/css/theme.css
@@ -802,16 +802,23 @@ img.avatar {
     border: 0;
 }
 
-#logo_container .logo_name {
+#logo_container .logo_name, #logo_container .logo_name:hover {
     font-size: 1.2em;
     color: #ECF0F4;
     margin: 0 30px 0 5px;
-    padding: 0;
-    line-height: 1.3;
+    padding: 4px 8px;
+    line-height: 1em;
     text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
     float: none;
     display: inline-block;
     vertical-align: middle;
+    border: none;
+    border-radius: 3px;
+    background-color: transparent;
+    transition: background-color 0.3s ease-in-out;
+}
+#logo_container .logo_name:hover {
+    background-color: rgba(255, 255, 255, 0.25);
 }
 .project-context #logo_name {
     display: none;
@@ -2665,7 +2672,6 @@ li.selected .tab_menu_dropdown a:hover, .tab_menu_container li.selected .tab_men
 
 .project_strip nav a.nav-button:hover {
     background-color: rgba(200, 200, 200, 0.15);
-    border: none;
     text-decoration: none;
 }
 
@@ -16862,9 +16868,7 @@ div[id^='dashboard_view_'] .recent_activities .faded_out.smaller a {
 }
 .project_strip .button-group .button-report-issue:hover {
     background-color: rgba(58, 186, 69, 1);
-    border: 0;
     color: #FFF;
-    padding: 10px;
 }
 
 .legendColorBox > div {
